--- a/SingleBoerseNRW/SingleBoerseNRW.csproj
+++ b/SingleBoerseNRW/SingleBoerseNRW.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Fonts\" />
+    <Folder Include="MVVM\Model\" />
+  </ItemGroup>
+
 </Project>
