--- a/SingleBoerseNRW/SingleBoerseNRW.csproj
+++ b/SingleBoerseNRW/SingleBoerseNRW.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\main2.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Fonts\" />
     <Folder Include="MVVM\Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\main2.png" />
   </ItemGroup>
 
 </Project>
